--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="IP.css">
 
     
-    <title>Document</title>
+    <title>Shinrai - The Security Authentication Website</title>
 </head>
 <body>
     <script src="IP.js"></script>
