--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         <div class="right_bx1">
             <!-- Dynamic background image with 3D modal -->
             <div class="modal">
-                <img src="https://via.placeholder.com/800x600" alt="Authentication">
+                <img src="img/user-removebg-preview.png" alt="Authentication">
                 <div class="overlay"></div>
             </div>
         </div>
