--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="right_bx1">
-            <img src="../New folder/girl-listen.avif" alt="" />
+            <img src="img/user-removebg-preview.png" alt="" />
         </div>
     </header>
     <script src="js/signup.js" type="module"></script>
