--- a/login.html
+++ b/login.html
@@ -6,6 +6,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap">
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        header {
+            display: flex;
+            flex-direction: column-reverse;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        .left_bx1,
+        .right_bx1 {
+            width: 100%;
+            text-align: center;
+        }
+
+        .content {
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+        }
+
+        .card {
+            margin-bottom: 20px;
+        }
+
+        .card label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .card input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        .submit {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .submit:hover {
+            background-color: #0056b3;
+        }
+
+        .check {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .check input {
+            margin-right: 5px;
+        }
+
+        .right_bx1 {
+            position: relative;
+            width: 100%;
+        }
+
+        /* .modal {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .modal img {
+            max-width: 100%;
+            height: auto;
+        } */
+
+        /* .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+            border-radius: 10px;
+        } */
+
+        @media screen and (min-width: 768px) {
+            header {
+                flex-direction: row;
+                justify-content: space-around;
+            }
+
+            .left_bx1,
+            .right_bx1 {
+                width: 45%;
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            .left_bx1,
+            .right_bx1 {
+                width: 80%;
+            }
+
+            .right_bx1 img {
+                display: none;
+            }
+        }
+    </style>
     <title>Website login</title>
 </head>
 
@@ -29,7 +150,7 @@
                     <input type="submit" value="Login" class="submit">
 
                     <div class="check">
-                        <input type="checkbox" name="remember" id="remember"/>
+                        <input type="checkbox" name="remember" id="remember" />
                         <label for="remember"> Remember me</label>
                     </div>
 
