--- a/signup.html
+++ b/signup.html
@@ -6,9 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="signup.css" />
-    <title>Music Website Sign up</title>
+    <title>Website Sign up</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
 
-    
+        header {
+            display: flex;
+            flex-direction: column-reverse;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .left_bx1,
+        .right_bx1 {
+            width: 100%;
+            text-align: center;
+        }
+
+        .content {
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+        }
+
+        .card {
+            margin-bottom: 20px;
+        }
+
+        .card label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .card input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        .submit {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .submit:hover {
+            background-color: #0056b3;
+        }
+
+        @media screen and (min-width: 768px) {
+            header {
+                flex-direction: row;
+                justify-content: space-around;
+            }
+
+            .left_bx1,
+            .right_bx1 {
+                width: 45%;
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            .left_bx1,
+            .right_bx1 {
+                width: 80%;
+            }
+
+            .right_bx1 img {
+                display: none;
+            }
+        }
+    </style>
 </head>
 
 <body>
