--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
         <p><a class="aboutus" href="#aboutus">About Us</a> | <a class="aboutus" href="#contact">Contact</a></p>
     </div>
     <script>
-      // JavaScript functions for the pop-up modal
       function showModal() {
           var modal = document.getElementById("myModal");
           modal.style.display = "block";
@@ -162,7 +161,7 @@
           modal.style.display = "none";
       }
       var joinUsButton = document.getElementById("joinUsButton");
-      joinUsButton.style.marginTop = "20px"; // Adjust the margin top as needed
+      joinUsButton.style.marginTop = "21px"; 
   </script>
 </body>
 </html>
