--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
         <p>© 2024 Shinrai. All rights reserved.</p>
         <p><a class="aboutus" href="#aboutus">About Us</a> | <a class="aboutus" href="#contact">Contact</a></p>
     </div>
-    
+    <script src="IP.js"></script>
 </body>
 </html>
