--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li></li>
                     <li><a href="#Home1">HOME</a></li>
                     <li><a href="#section3">EXPLORE</a></li>
-                    <li><a href="#aboutus">ABOUT US</a></li>
+                    <li><a href="#explore1">ABOUT US</a></li>
                     <li><a href="#Joinus">JOIN US</a></li>
                 </ul>
             </nav>
