--- a/pass.html
+++ b/pass.html
@@ -92,12 +92,12 @@
                 <option value="medium">Medium</option>
                 <option value="strong">Strong</option>
             </select>
-            <button id="generatePasswordBtn" class="btn btn-primary mt-2">Generate Password</button>
+            <center><button id="generatePasswordBtn" class="btn btn-primary mt-2">Generate Password</button></center>
         </div>
         <div id="passwordDisplay" style="display: none;">
             <input type="text" class="form-control mt-3" id="displayedPassword" readonly>
-            <button id="copyGeneratedPasswordBtn" class="btn btn-primary mt-2">Copy Password</button>
-            <button id="hideGeneratedPasswordBtn" class="btn btn-secondary mt-2">Hide</button>
+           <center><button id="copyGeneratedPasswordBtn" class="btn btn-primary mt-2">Copy Password</button>
+            <button id="hideGeneratedPasswordBtn" class="btn btn-secondary mt-2">Hide</button></center>
         </div>
     </div>
     
