--- a/pass.html
+++ b/pass.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <img id="logo" src="img/WhatsApp_Image_2024-04-02_at_23.33.54_a3b612e2-removebg-preview.png" alt="" class="logo-img">
+        <img id="logo" src="img/WhatsApp_Image_2024-04-02_at_23.33.54_a3b612e2-removebg-preview.png" alt="Logo" class="logo-img">
         <a class="navbar-brand" href="#">SHINRAI</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportContent" aria-controls="navbarSupportContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
