Add app details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#Joinus">JOIN US</a></li>
                 </ul>
             </nav>
-            <a href="login.html"><button id="loginbutton">Login</button></a>
+            <a href="login.html"><button id="loginbutton">Try Now </button></a>
         </div>
     </header>
 
@@ -62,7 +62,7 @@
     <div id="myModal" class="modal" onclick="closeModal()">
       <div class="modal-content" onclick="event.stopPropagation()">
           <span class="close" onclick="closeModal()">&times;</span>
-          <h1>This feature is currently unavailable. Please enjoy our free service.</h1>
+          <center><h1>This feature is currently unavailable. <br>Please enjoy our free service and also try our app. </h1></center>
       </div>
   </div>
 
@@ -123,6 +123,12 @@
             <br>
             <img class="exploreimg" id="exploreimg-1" src="img/th (1).jpeg"><img class="exploreimg" id="exploreimg-2" src="img/th (2).jpeg"><img class="exploreimg" id="exploreimg-3" src="img/th.jpeg">
             <p></p></center>
+            <br>
+            <br>
+
+            <center><h1>Try our app</h1></center>
+          <center><img style="width: 90px;height: 90px;" src="img\WhatsApp_Image_2024-04-02_at_23.33.54_a3b612e2-removebg-preview.png"></center>
+<center><h2>Shinrai</h2></center>
     </div>
 
     <div id="end">
